# python-polymorphism

./: Makefile  pyproject.toml  readme.md  solution.py
PROBATIONS/clock_states/: alarm_clock.py  test_solution.py
PROBATIONS/clock_states/states/: state.py  (+3 more)
PROBATIONS/game_character_state/: character.py  states.py  test_solution.py
PROBATIONS/hotels_dynamic_dispatch/: gateway.py  solution.py
database_loader/: solution.py
database_loader/tests/: test_solution.py
decorator_pattern/: calculator.py  solution.py
decorator_pattern/tests/: test_solution.py
dependency_nversion/: weather_service.py
dependency_nversion/scripts/: weather.py  weather_service.py
dependency_nversion/tests/: test_weather_service.py
dynamic_dispatching/: circle.py  dispatcher.py  figure.py  square.py
dynamic_dispatching/tests/: test_solution.py
factory_pattern/: config_factory.py
factory_pattern/parsers/: json_parser.py  yaml_parser.py
factory_pattern/tests/: test_solution.py
kill_polymorphism/: guest.py  solution.py  user.py
kv_database/: in_memory_kv.py  solution.py
kv_database/tests/: test_file_kv.py  test_in_memory_kv.py  test_solution.py
mixins/: classes.py  mixins.py  test_mixins.py
null_object_pattern/: fake_subscription.py  user.py
null_object_pattern/tests/: test_solution.py
state_pattern/: tcp_connection.py
state_pattern/states/: connected.py  disconnected.py
state_pattern/tests/: test_tcp.py
strategy_pattern/: tic_tac_toe.py
strategy_pattern/strategies/: easy.py  normal.py
strategy_pattern/tests/: test_solution.py
tests/: test_solution.py
(+1 files in other folders)
